# library_management_fastapi

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
library_management/: main.py
library_management/alembic/: env.py
library_management/alembic/versions/: 2024_12_14_1337-0f08e305d898_create_tables_auther_book_borrow.py  2024_12_14_1631-240bf0aa5882_unique_constraint_for_author.py  2024_12_14_2122-33535b2c08fc_unique_constraint_for_book.py  2024_12_15_2032-bd47e4ed3b66_add_type_none_to_returned_at.py
library_management/core/: __init__.py  base.py  config.py  database.py
library_management/crud/: author.py  book.py  borrow.py  dependencies.py
library_management/models/: author_model.py  book_model.py  borrow_model.py
library_management/models/mixins/: int_id_pk.py
library_management/routers/: __init__.py  author_router.py  book_router.py  borrow_router.py
library_management/schemas/: author_schemas.py  book_schemas.py  borrow_schemas.py
library_management/utils/: case_converter.py
